changes for about me

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ description: Home Page for Jekyll Metro Theme
 	<nav>
 		<div class="row">
  			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="about/" title="About Me">
+				<a href="/blog/about/" title="About Me">
 					<div class="tile purple profile">
 						<h2 class="title">About Me</h2>
-						<p>Hello World, I am {{site.author}}.</p>
+						<p>Having completed my undergrad from IIT Jodhpur in Computer Science and Engineering...</p>
 					</div>
 				</a>
 		    </div>
